# retail

./: .dockerignore  .env.example  .gitignore  .vercelignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vercel.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260417_000001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  dashboard.py  inventory.py  me.py  products.py  sales.py  shifts.py  staff.py  stores.py
backend/app/db/: session.py
backend/app/schemas/: admin.py  auth.py  catalog.py  dashboard.py  sales.py  shift.py
backend/scripts/: seed_db.py
frontend/: Dockerfile  nginx.conf
infra/nginx/: retail.conf
src/: App.tsx  index.css
src/components/: RoleSelector.tsx
src/hooks/: useTelegram.ts
src/lib/: api.ts
src/store/: useAuthStore.ts  useInventoryStore.ts  useSaleStore.ts  useSettingsStore.ts  useStaffStore.ts
src/views/Admin/: AdminDashboard.tsx
src/views/Seller/: SellerDashboard.tsx
